--- a/courses-frontend/package.json
+++ b/courses-frontend/package.json
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8008",
+  "proxy": "http://137.184.235.156:8008",
   "eslintConfig": {
     "extends": [
       "react-app",
